--- a/bunpu.html
+++ b/bunpu.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>輸液製剤の体内分布</title>
+
+
 <style>
   :root{
     --bg:#fff; --card:#fff; --text:#0f172a; --muted:#64748b; --line:#e2e8f0;
@@ -21,7 +23,7 @@
   h1{font-size:18px;margin:0 0 14px}
   .row{display:flex;gap:12px;flex-wrap:wrap;align-items:end}
   .ctrl{flex:1;min-width:240px}
-  label{display:block;font-size:12px;color:var(--muted);margin:0 0 6px}
+  label{display:block;font-size:12px;color:var(--muted);margin:12px 0 6px}
   select, input[type="range"]{width:100%}
   select{border:1px solid var(--line);border-radius:12px;padding:10px 12px;background:#fff;outline:none}
   .topline{display:flex;justify-content:space-between;align-items:center;margin-bottom:6px}
@@ -43,6 +45,7 @@
     flex: 0 0 0%;
     display:flex;align-items:center;justify-content:center;
     font-weight:800;
+    font-size:13px;
     transition:flex-basis 220ms ease; /* ←伸び縮み */
     position:relative;
   }
@@ -78,35 +81,16 @@
   .title{display:flex;justify-content:space-between;gap:10px;align-items:baseline}
   .title b{font-size:13px}
   .title span{font-size:12px;color:var(--muted);display:none}
-  .num{margin-top:10px;font-size:22px;font-weight:800;font-variant-numeric:tabular-nums}
+  .num{margin-top:10px;font-size:13px;font-weight:800;font-variant-numeric:tabular-nums}
   .delta{margin-top:2px;font-size:12px;color:rgba(0,0,0,.6)}
 .note{margin:12px 0 0 6px;font-size:12px;color:var(--muted)}
 </style>
+
 </head>
 <body>
 <div class="wrap">
   <div class="card">
     <h1>輸液製剤の体内分布</h1>
-
-    <div class="row">
-      <div class="ctrl">
-        <label>輸液製剤の種類</label>
-        <select id="fluid">
-          <option value="ns">生理食塩水</option>
-          <option value="sol1">1号液</option>
-          <option value="sol3">3号液</option>
-          <option value="d5w">ブドウ糖液</option>
-        </select>
-      </div>
-
-      <div class="ctrl">
-        <div class="topline">
-          <label style="margin:0">投与量（0〜3000 mL）</label>
-          <span class="pill">現在 <span class="dose" id="doseText">0</span> mL</span>
-        </div>
-        <input id="dose" type="range" min="0" max="3000" step="50" value="0" />
-      </div>
-    </div>
 
     <div class="stackWrap">
       <div class="stackTitle">
@@ -138,6 +122,28 @@
         <div class="delta">＋<span id="ivDelta">0.00</span> L</div>
       </div>
     </div>
+
+    <div class="row">
+      <div class="ctrl">
+        <label>輸液製剤の種類</label>
+        <select id="fluid">
+          <option value="ns">生理食塩水</option>
+          <option value="sol1">1号液</option>
+          <option value="sol3">3号液</option>
+          <option value="d5w">ブドウ糖液</option>
+        </select>
+      </div>
+
+      <div class="ctrl">
+        <div class="topline">
+          <label style="margin:0">投与量（0〜3000 mL）</label>
+          <span class="pill">現在 <span class="dose" id="doseText">0</span> mL</span>
+        </div>
+        <input id="dose" type="range" min="0" max="3000" step="50" value="0" />
+      </div>
+    </div>
+
+
   </div>
 
   <div class="note">※ 体重 60 kgの場合を想定</div>
